# Obs4MIPs_rel

./: .gitignore  README.md
.github/workflows/: wheels.yml
Obs4MIPs_AMSU_forward_operator/: README.md  pyproject.toml
Obs4MIPs_AMSU_forward_operator/examples/: test_AMSU_forward_operator_table.py
Obs4MIPs_AMSU_forward_operator/examples/input_data/ERA5/monthly/2D/2024/: era5_GEO_2D_360_181_2024_01.nc  era5_W10_2D_360_181_2024_01.nc
Obs4MIPs_AMSU_forward_operator/rss_amsu_forward_operator/: AMSU_forward_operator_table.py
Obs4MIPs_forward_operator/: README.md  pyproject.toml
Obs4MIPs_forward_operator/Obs4MIPS_forward_operator/: AMSU_constants.py  AMSU_forward_operator_table.py  __init__.py
Obs4MIPs_forward_operator/examples/: test_AMSU_forward_operator_table.py
calc_tb_sounder/: README.md  meson.build  pyproject.toml
calc_tb_sounder/data/abs_tables/: amsu_05_cld_abs_table.nc  amsu_07_cld_abs_table.nc  amsu_09_cld_abs_table.nc
calc_tb_sounder/data/emiss_tables/: amsu_01_emiss_table_W.nc  amsu_01_emiss_table_W_by_pol.nc  amsu_01_emiss_table_sea_ice.nc  amsu_02_emiss_table_W.nc  amsu_02_emiss_table_W_by_pol.nc  amsu_02_emiss_table_sea_ice.nc  amsu_03_emiss_table_W.nc  amsu_03_emiss_table_W_by_pol.nc  amsu_03_emiss_table_sea_ice.nc  amsu_04_emiss_table_W.nc  amsu_04_emiss_table_W_by_pol.nc  amsu_04_emiss_table_sea_ice.nc  amsu_05_emiss_table_W.nc  amsu_05_emiss_table_W_by_pol.nc  amsu_05_emiss_table_sea_ice.nc  amsu_06_emiss_table_W.nc  amsu_06_emiss_table_W_by_pol.nc  amsu_06_emiss_table_sea_ice.nc  amsu_07_emiss_table_W.nc  amsu_07_emiss_table_W_by_pol.nc  amsu_07_emiss_table_sea_ice.nc  amsu_08_emiss_table_W.nc  amsu_08_emiss_table_W_by_pol.nc  amsu_08_emiss_table_sea_ice.nc  amsu_09_emiss_table_W.nc  amsu_09_emiss_table_W_by_pol.nc  amsu_09_emiss_table_sea_ice.nc  amsu_10_emiss_table_W.nc  amsu_10_emiss_table_sea_ice.nc
calc_tb_sounder/data/ocean_emiss_tables/: ocean_emissivity_table_AMSU_channel_01.nc  ocean_emissivity_table_AMSU_channel_02.nc  ocean_emissivity_table_AMSU_channel_03.nc  ocean_emissivity_table_AMSU_channel_04.nc  ocean_emissivity_table_AMSU_channel_05.nc  ocean_emissivity_table_AMSU_channel_06.nc  ocean_emissivity_table_AMSU_channel_07.nc  ocean_emissivity_table_AMSU_channel_08.nc  ocean_emissivity_table_AMSU_channel_09.nc  ocean_emissivity_table_AMSU_channel_10.nc  ocean_emissivity_table_AMSU_channel_7.nc  ocean_emissivity_table_MSU_channel_01.nc  ocean_emissivity_table_MSU_channel_02.nc  ocean_emissivity_table_MSU_channel_03.nc  ocean_emissivity_table_MSU_channel_04.nc
calc_tb_sounder/src/: AMSU_Constants.f90  Calc_Tb_multiview_AMSU.f90  rtm.f90  rtm_tables_AMSU.f90
calc_tb_sounder/tests/: Calc_Tb_AMSU.py  smoke_test.py
calc_tb_sounder_simple/: ReadMe.md  pyproject.toml
calc_tb_sounder_simple/calc_tb_sounder_simple/: AtmWts_method_1.py  sounder_tbs_simple.py
calc_tb_sounder_simple/calc_tb_sounder_simple/data/wt_tables/: std_atmosphere_wt_function_amsu_chan_TLS_land_by_surface_pressure.1100.nc  std_atmosphere_wt_function_amsu_chan_TMT_land_by_surface_pressure.1100.V4.nc  std_atmosphere_wt_function_amsu_chan_TMT_land_by_surface_pressure.1100.nc  std_atmosphere_wt_function_amsu_chan_TMT_ocean_by_surface_pressure.1100.nc  std_atmosphere_wt_function_amsu_chan_TTS_land_by_surface_pressure.1100.V4.nc
calc_tb_sounder_simple/data/wt_tables/: std_atmosphere_wt_function_amsu_chan_TTS_land_by_surface_pressure.1100.nc
calc_tb_sounder_simple/src/calc_tb_sounder_simple/: AtmWts_method_1.py  __init__.py  sounder_tbs_simple.py
calc_tb_sounder_simple/src/msu_tbs_simple/: sounder_tbs_simple.py
examples/: era5.py  test_AMSU_forward_operator_simple.py  test_AMSU_forward_operator_table.py
examples/input_data/ERA5/monthly/2D/2024/: era5_TDew_2D_360_181_2024_01.nc
examples/input_data/ERA5/monthly/3D/2024/: era5_CLD_3D_360_181_2024_01.nc  era5_G_3D_360_181_2024_01.nc  era5_Q_3D_360_181_2024_01.nc
sounder_tbs_simple/data/wt_tables/: std_atmosphere_wt_function_amsu_chan_TMT_ocean_by_surface_pressure.1100.V4.nc
