[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-amsu-forward-operator"
version = "0.1.0"
description = "RSS AMSU forward operator utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Carl Mears", email = "mears@remss.com"},
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["rss_amsu_forward_operator*"]
