[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obs4mips-amsu-forward-operator"
version = "0.1.0"
description = "OBS4MIPs AMSU forward operator utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Carl Mears", email = "mears@remss.com"},
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["obs4mips_amsu_forward_operator*"]
