[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obs4mips-forward-operator"
version = "0.1.0"
description = "OBS4MIPs forward operator utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Carl Mears", email = "mears@remss.com"},
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["Obs4MIPS_forward_operator*"]
