[build-system]
# Use meson-python as the bridge between pip and Meson
requires = ["meson-python >= 0.14.0", "ninja", "numpy"]
build-backend = "mesonpy"

[project]
name = "Calc_Tb_AMSU"
version = "0.1.0"
readme = "README.md"
description = "AMSU multi-view brightness temperature calculator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0"
    ]
license = {text = "MIT"}
authors = [
    {name = "Carl Mears", email = "mears@remss.com"},
]

[tool.pytest.ini_options]
testpaths = ["python"]
