[build-system]
# Use meson-python as the bridge between pip and Meson
requires = ["meson-python >= 0.14.0", "ninja", "numpy"]
build-backend = "mesonpy"

[project]
name = "Calc_Tb_AMSU"
version = "0.1.0"
readme = "README.md"
description = "AMSU multi-view brightness temperature calculator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0"
    ]
license = {text = "MIT"}
authors = [
    {name = "Carl Mears", email = "mears@remss.com"},
]

[tool.pytest.ini_options]
testpaths = ["python"]

[tool.cibuildwheel.linux]
# Note this handles both manylinux_2_28 (based on AlmaLinux 8) and musllinux_1_2 (based on Alpine Linux 3.22)
before-all = "if type dnf &> /dev/null; then dnf install -y epel-release && dnf install -y netcdf-fortran-devel; else apk add netcdf-fortran-dev; fi"

